remove feature transaction by date
